# todo-list

./: .gitignore  README.md
api/: .gitignore  pyproject.toml  requirements.txt  todo.py
backups/api_old/: route.ts
backups/api_old/create-task/: route.ts
backups/api_old/list-tasks/[slug]/: route.ts
backups/new/: page.tsx
todo-infra/: .gitignore  package-lock.json  package.json
todo-infra/lib/: todo-infra-stack.ts
todo-site/: package-lock.json  package.json
todo-site/src/app/: layout.tsx  page.tsx
todo-site/src/app/data/: main.tsx  tasks.tsx
todo-site/src/components/: TaskList.tsx
