[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ckbuhl <ckbuhl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
mangum = "^0.17.0"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
